--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -42,13 +42,16 @@ body {
 
 h1{
   font-size: 3em;
+  font-weight: 600;
 }
 
 h2{
   font-size: 2em;
+  font-weight: 600;
 }
 h3{
   font-size: 1.6em;
+  font-weight: 500;
 }
 
 .filterImg{
@@ -57,7 +60,7 @@ h3{
 }
 
 .button1{
-  background-color: #FF4500;
+  background-color: #FF4E0C;
   border: 1px solid #FFFFFF;
   color: #FFFFFF;
   border-radius: 10px;
@@ -76,7 +79,7 @@ h3{
 }
 
 .button3{
-  background-color: #FF4500;
+  background-color: #FF4E0C;
   color:#D9D9D9;
   border-radius: 0.5rem;
   border: 2px solid #000000;
